# cargo-ndk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
example/: Cargo.toml  README.md
example/basic/: Cargo.toml
example/basic/.cargo/: config.toml
example/basic/src/: lib.rs  main.rs
example/bindgen/: Cargo.toml  README.md  build.rs
example/bindgen/src/: lib.rs
example/ndk-sys/: Cargo.toml
example/ndk-sys/src/: lib.rs
example/openssl/: Cargo.toml  README.md
example/src/: lib.rs
src/: cargo.rs  cli.rs  lib.rs  main.rs  meta.rs  shell.rs
src/cli/: env.rs  mod.rs  runner.rs  test.rs
