[package]
name = "cargo-ndk"
version = "2.12.6"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
repository = "https://github.com/bbqsrc/cargo-ndk"
documentation = "https://docs.rs/cargo-ndk"
homepage = "https://github.com/bbqsrc/cargo-ndk"
license = "Apache-2.0 OR MIT"
description = "Makes building Rust libraries for Android simpler"
keywords = ["ndk", "cargo", "android", "build"]
categories = [
    "command-line-utilities",
    "config",
    "os",
    "development-tools::cargo-plugins",
    "development-tools::build-utils"
]
edition = "2018"
rust-version = "1.56"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cargo_metadata = "0.15.0"
env_logger = "0.9.1"
gumdrop = "0.8.1"
log = "0.4.17"
pathos = "0.3.0"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
