[package]
name = "cargo-ndk"
version = "3.5.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
repository = "https://github.com/bbqsrc/cargo-ndk"
documentation = "https://docs.rs/cargo-ndk"
homepage = "https://github.com/bbqsrc/cargo-ndk"
license = "Apache-2.0 OR MIT"
description = "Makes building Rust libraries for Android simpler"
keywords = ["ndk", "cargo", "android", "build"]
categories = [
    "command-line-utilities",
    "config",
    "os",
    "development-tools::cargo-plugins",
    "development-tools::build-utils"
]
edition = "2021"
rust-version = "1.68"
default-run = "cargo-ndk"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.75"
cargo_metadata = "0.18.1"
dunce = "1.0.4"
gumdrop = "0.8.1"
is-terminal = "0.4.9"
libc = "0.2.147"
pathos = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.115"
termcolor = "1.2.0"
toml = "0.8.8"
version_check = "0.9.4"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
]
