[package]
name = "cargo-ndk"
version = "3.5.7"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
repository = "https://github.com/bbqsrc/cargo-ndk"
documentation = "https://docs.rs/cargo-ndk"
homepage = "https://github.com/bbqsrc/cargo-ndk"
license = "Apache-2.0 OR MIT"
description = "Makes building Rust libraries for Android simpler"
keywords = ["ndk", "cargo", "android", "build"]
categories = [
    "command-line-utilities",
    "config",
    "os",
    "development-tools::cargo-plugins",
    "development-tools::build-utils"
]
edition = "2024"
rust-version = "1.86"
default-run = "cargo-ndk"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.98"
cargo_metadata = "0.21.0"
dunce = "1.0.5"
filetime = "0.2.25"
clap = { version = "4.5", features = ["derive", "env"] }
is-terminal = "0.4.16"
libc = "0.2.174"
pathos = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
termcolor = "1.4.1"
toml = "0.9.2"
version_check = "0.9.5"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
]
